--- a/.github/workflows/SQLMap_Tests.yml
+++ b/.github/workflows/SQLMap_Tests.yml
@@ -1,4 +1,4 @@
-name: SQLMap Tests
+name: SQLMap and Django Tests
 
 on:
   push:
@@ -14,24 +14,36 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: [ '3.9', '3.10', '3.11' ]
     steps:
+      # Checkout repository
       - name: Checkout Repository
         uses: actions/checkout@v2
 
+      # Set up Python
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
 
+      # Install dependencies
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      # Django CI test
+      - name: Django Tests
+        run: |
+          python -m django --version
+          python manage.py test  # Pastikan `manage.py` ada di proyek Anda
+
+      # SQLMap basic import test
       - name: Basic Import Test
         run: python -c "import sqlmap; import sqlmapapi"
 
+      # SQLMap smoke test
       - name: Smoke Test
         run: python sqlmap.py --smoke
 
+      # SQLMap vulnerability test
       - name: Vulnerability Test
         run: python sqlmap.py --vuln
