--- a/.github/workflows/SQLMap_Tests.yml
+++ b/.github/workflows/SQLMap_Tests.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Django Tests
         run: |
           python -m django --version
-          python manage.py test  # Pastikan `manage.py` ada di proyek Anda
+          python manage.py test
 
       # SQLMap basic import test
       - name: Basic Import Test
