--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest  # Tentukan sistem operasi yang ingin digunakan
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -18,7 +18,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: '3.10'  # Tentukan versi Python yang diinginkan
+          python-version: '3.10'
 
       - name: Install dependencies
         run: |
